Create pagine inserisci annuncio e catalogo
Inoltre aggiunta anche la caparra come attributo di annuncio del db

--- a/RentAdvisor/RentAdvisor/css/style.css
+++ b/RentAdvisor/RentAdvisor/css/style.css
@@ -2940,7 +2940,7 @@ img {
     width: 50%;
   }
 
-  #aa-contact .aa-contact-area .aa-contact-bottom .aa-contact-form .contactform {
+  #aa-contact .aa-contact-area .aa-contact-bottom .aa-contact-F .contactform {
     width: 70%;
   }
 
