--- a/RentAdvisor/RentAdvisor/css/style.css
+++ b/RentAdvisor/RentAdvisor/css/style.css
@@ -70,6 +70,10 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Poppins", sans-serif;
 }
 
+fieldset{
+  display: block;
+}
+
 h2 {
   font-size: 30px;
   font-weight: 700;
