--- a/RentAdvisor/RentAdvisor/css/style.css
+++ b/RentAdvisor/RentAdvisor/css/style.css
@@ -492,9 +492,10 @@ img {
   width: 100%;
   position: relative;
 }
+/* qui sotto viene definita la dimensione dello slider principale di immagini, di ogni pagina  */
 #aa-slider .aa-slider-area .aa-top-slider .aa-top-slider-single img {
   width: 100%;
-  height: 700px;
+  height: 500px;
 }
 #aa-slider .aa-slider-area .aa-top-slider .aa-top-slider-single .aa-top-slider-content {
   background-color: rgba(255, 255, 255, 0.8);
@@ -750,6 +751,15 @@ img {
   -ms-transition: all 0.5s;
   -o-transition: all 0.5s;
   transition: all 0.5s;
+}
+.aa-profile-column {
+  display: inline;
+  float: left;
+  margin-top: 30px;
+  margin-right: 50px;
+  margin-left: 50px;
+  width: 50%;
+  position: relative;
 }
 .aa-properties-item:hover {
   box-shadow: 1px 2px 5px 3px #ccc;
@@ -1327,7 +1337,7 @@ img {
 ====================*/
 
 #aa-property-header {
-  background-image: url("../img/property-header-bg.jpg");
+  background-image: url("../img/slider/Milano\ -\ Copia.jpg");
   background-attachment: fixed;
   background-position: center center;
   background-size: cover;
@@ -2693,6 +2703,26 @@ img {
   -ms-transition: all 0.5s;
   -o-transition: all 0.5s;
   transition: all 0.5s;
+}
+.round-button {
+  display:block;
+  position: relative;
+  width:200px;
+  height:200px;
+  line-height:180px;
+  border: 8px solid #f5f5f5;
+  border-radius: 50%;
+  margin-left: 40px;
+  color:#005bf7;
+  text-align:center;
+  text-decoration:none;
+  background: #D2691E;
+  box-shadow: 0 0 3px gray;
+  font-size:16px;
+  font-weight:bold;
+}
+.round-button:hover {
+  background: #c43e0d;
 }
 
 /*==================
