--- a/laraProj_RentAdvisor/resources/views/views_html/inserimento_annuncio.html
+++ b/laraProj_RentAdvisor/resources/views/views_html/inserimento_annuncio.html
@@ -88,7 +88,7 @@
                             </div>
                             <div class="col-md-6 col-sm-6 col-xs-6">
                                 <div class="aa-header-right">
-                                    <a href="index.blade.php" class="aa-login"><span class="fa fa-user"></span>  PROPRIETARIO</a> |
+                                    <a href="index.html" class="aa-login"><span class="fa fa-user"></span>  PROPRIETARIO</a> |
                                     <a href="#" class="aa-login"><span class="fa fa-envelope"></span> </a>|
                                     <a href="#" class="aa-login"><span class="fa fa-edit"></span> </a>|
                                     <a href="#" class="aa-login"><span class="fa fa-sign-out"></span> </a>
@@ -116,17 +116,17 @@
                     </button>
                     <!-- LOGO -->
                     <!-- Text based logo -->
-                    <a class="navbar-brand aa-logo" href="index.blade.php"> <span>RentAdvisor</span> </a>
+                    <a class="navbar-brand aa-logo" href="index.html"> <span>RentAdvisor</span> </a>
                     <!-- Image based logo -->
-                    <!-- <a class="navbar-brand aa-logo-img" href="index.blade.php"><img src="img/logo.png" alt="logo"></a> -->
+                    <!-- <a class="navbar-brand aa-logo-img" href="index.html"><img src="img/logo.png" alt="logo"></a> -->
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul id="top-menu" class="nav navbar-nav navbar-right aa-main-nav">
-                        <li><a href="index.blade.php">HOME</a></li>
+                        <li><a href="index.html">HOME</a></li>
                         <li><a href="catalogo.html">CATALOGO</a></li>
                         <li class="active"><a href="#">AREA PERSONALE</a></li>
-                        <li><a href="contact.html">CONTATTI</a></li>
-                        <li><a href="faq.blade.php">FAQ</a></li>
+                        <li><a href="contact.blade.php">CONTATTI</a></li>
+                        <li><a href="faq.html">FAQ</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
@@ -415,9 +415,9 @@
                             </div>
                             <div class="col-md-6 col-sm-12 col-xs-12">
                                 <div class="aa-footer-right">
-                                    <a href="index.blade.php">Home</a>
-                                    <a href="faq.blade.php">FAQ</a>
-                                    <a href="contact.html">Contatti</a>
+                                    <a href="index.html">Home</a>
+                                    <a href="faq.html">FAQ</a>
+                                    <a href="contact.blade.php">Contatti</a>
                                 </div>
                             </div>
                         </div>
