--- a/laraProj_RentAdvisor/resources/views/views_html/faq.html
+++ b/laraProj_RentAdvisor/resources/views/views_html/faq.html
@@ -1,125 +1,126 @@
 <!DOCTYPE html>
-<html lang="it">
-<head>
+<html lang="en">
+  <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">    
     <title>RentAdvisor | FAQ</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="{{ asset('images/home_house.png') }}" type="image/x-icon">
-
+    <link rel="shortcut icon" href="img/home_house.png" type="image/x-icon">
+    
     <!-- Font awesome -->
-    <link href="{{ asset('css/font-awesome.css') }}" rel="stylesheet">
+    <link href="css/font-awesome.css" rel="stylesheet">
     <!-- Bootstrap -->
-    <link href="{{ asset('css/bootstrap.css') }}" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">   
     <!-- slick slider -->
-    <link rel="stylesheet" type="text/css" href="{{ asset('css/slick.css') }}">
+    <link rel="stylesheet" type="text/css" href="css/slick.css">
     <!-- price picker slider -->
-    <link rel="stylesheet" type="text/css" href="{{ asset('css/nouislider.css') }}">
+    <link rel="stylesheet" type="text/css" href="css/nouislider.css">
     <!-- Fancybox slider -->
-    <link rel="stylesheet" href="{{ asset('css/jquery.fancybox.css') }}" type="text/css" media="screen" />
+    <link rel="stylesheet" href="css/jquery.fancybox.css" type="text/css" media="screen" /> 
     <!-- Theme color -->
-    <link id="switcher" href="{{ asset('css/theme-color/default-theme.css') }}" rel="stylesheet">
+    <link id="switcher" href="css/theme-color/default-theme.css" rel="stylesheet">     
 
     <!-- Main style sheet -->
-    <link href="{{ asset('css/style.css') }}" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">    
 
-
+   
     <!-- Google Font -->
-    <link href='https://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>    
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-
+    
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+  
 
-</head>
-<body class="aa-price-range">
-<!-- Pre Loader -->
-<div id="aa-preloader-area">
+  </head>
+  <body>
+  <!-- Pre Loader -->
+  <div id="aa-preloader-area">
     <div class="pulse"></div>
-</div>
-<!-- SCROLL TOP BUTTON -->
-<a class="scrollToTop" href="#"><i class="fa fa-angle-double-up"></i></a>
-<!-- END SCROLL TOP BUTTON -->
+  </div>
+  <!-- SCROLL TOP BUTTON -->
+    <a class="scrollToTop" href="#"><i class="fa fa-angle-double-up"></i></a>
+  <!-- END SCROLL TOP BUTTON -->
 
-<!-- HOME LIVELLO 0 -->
-<!-- Start header section -->
-<header id="aa-header">
+
+  <!-- Start header section -->
+  <header id="aa-header">  
     <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="aa-header-area">
-                    <div class="row">
-                        <div class="col-md-6 col-sm-6 col-xs-6">
-                            <div class="aa-header-left">
-                                <div class="aa-telephone-no">
-                                    <span class="fa fa-phone"></span>
-                                    071 419 0330
-                                </div>
-                                <div class="aa-email hidden-xs">
-                                    <span class="fa fa-envelope-o"></span> info@rentadvisor.com
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-sm-6 col-xs-6">
-                            <div class="aa-header-right">
-                                <a href="register.blade.php" class="aa-register">Registrati</a>
-                                <a href="signin.blade.php" class="aa-login">Accedi</a>
-                            </div>
-                        </div>
-                    </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="aa-header-area">
+            <div class="row">
+              <div class="col-md-6 col-sm-6 col-xs-6">
+                <div class="aa-header-left">
+                  <div class="aa-telephone-no">
+                    <span class="fa fa-phone"></span>
+                    1-900-523-3564
+                  </div>
+                  <div class="aa-email hidden-xs">
+                    <span class="fa fa-envelope-o"></span> info@rentadvisor.com
+                  </div>
+                </div>              
+              </div>
+              <div class="col-md-6 col-sm-6 col-xs-6">
+                <div class="aa-header-right">
+                  <a href="register.html" class="aa-register">Registrati</a>
+                  <a href="signin.html" class="aa-login">Accedi</a>
                 </div>
+              </div>
             </div>
+          </div>
         </div>
+      </div>
     </div>
-</header>
-<!-- End header section -->
+  </header>
+  <!-- End header section -->
 
-<!-- Start menu section -->
-<section id="aa-menu-area">
-    <nav class="navbar navbar-default main-navbar" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <!-- FOR MOBILE VIEW COLLAPSED BUTTON -->
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <!-- LOGO -->
-                <!-- Text based logo -->
-                <a class="navbar-brand aa-logo" href="{{ route('home') }}"> <span>RentAdvisor</span> </a>
-                <!-- Image based logo -->
-                <!-- <a class="navbar-brand aa-logo-img" href="index.blade.php"><img src="img/logo.png" alt="logo"></a> -->
-            </div>
-            <div id="navbar" class="navbar-collapse collapse">
-                <ul id="top-menu" class="nav navbar-nav navbar-right aa-main-nav">
-                    <li class="active"><a href="{{ route('home') }}">HOME</a></li>
-                    <li><a href="{{ route('catalog') }}">CATALOGO</a></li>
-                    <li><a href="{{ route('contact') }}">CONTATTI</a></li>
-                    <li><a href="{{ route('faq') }}">FAQ</a></li>
-                </ul>
-            </div><!--/.nav-collapse -->
+  <!-- Start menu section -->
+  <section id="aa-menu-area">
+    <nav class="navbar navbar-default main-navbar" role="navigation">  
+      <div class="container">
+        <div class="navbar-header">
+          <!-- FOR MOBILE VIEW COLLAPSED BUTTON -->
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <!-- LOGO -->                                               
+          <!-- Text based logo -->
+          <a class="navbar-brand aa-logo" href="index.html"><span>RentAdvisor</span></a>
+          <!-- Image based logo -->
+          <!-- <a class="navbar-brand aa-logo-img" href="index.html"><img src="img/logo.png" alt="logo"></a> -->                     
         </div>
-    </nav>
-</section>
-<!-- End menu section -->
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul id="top-menu" class="nav navbar-nav navbar-right aa-main-nav">
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="catalog.html"> CATALOGO</a></li>
+            <li><a href="contact.html">CONTATTI</a></li>
+            <li class="active"><a href="#">FAQ</a></li>
+            </ul>                          
+        </div><!--/.nav-collapse -->       
+      </div>          
+    </nav> 
+  </section>
+  <!-- End menu section -->
 
-<!-- Start slider  -->
-<section id="aa-slider">
+  <!-- Start slider  -->
+  <section id="aa-slider">
     <div class="aa-slider-area"> 
       <!-- Top slider -->
       <div class="aa-top-slider">
         <!-- Top slider single slide -->
         <div class="aa-top-slider-single">
-          <img src="{{ asset('images/slider/Milano.jpg') }}" alt="img">
+          <img src="img/slider/Milano.jpg" alt="img">
           <!-- Top slider content -->
           <div class="aa-top-slider-content">
               <div class="aa-property-header-inner">
@@ -135,7 +136,7 @@
         <!-- / Top slider single slide -->
         <!-- Top slider single slide -->
         <div class="aa-top-slider-single">
-          <img src="{{ asset('images/slider/Bologna.jpg') }}" alt="img">
+          <img src="img/slider/Bologna.jpeg" alt="img">
           <!-- Top slider content -->
           <div class="aa-top-slider-content">
             <div class="aa-property-header-inner">
@@ -151,7 +152,7 @@
         <!-- / Top slider single slide -->
         <!-- Top slider single slide -->
         <div class="aa-top-slider-single">
-          <img src="{{ asset('images/slider/Ancona.jpeg') }}" alt="img">
+          <img src="img/slider/Ancona.jpeg" alt="img">
           <!-- Top slider content -->
           <div class="aa-top-slider-content">
             <div class="aa-property-header-inner">
@@ -167,7 +168,7 @@
         <!-- / Top slider single slide -->       
          <!-- Top slider single slide -->
         <div class="aa-top-slider-single">
-          <img src="{{ asset('images/slider/Lecce.jpeg') }}" alt="img">
+          <img src="img/slider/Lecce.jpeg" alt="img">
           <!-- Top slider content -->
           <div class="aa-top-slider-content">
             <div class="aa-property-header-inner">
@@ -183,7 +184,7 @@
         <!-- / Top slider single slide -->        
          <!-- Top slider single slide -->
         <div class="aa-top-slider-single">
-          <img src="{{ asset('images/slider/Pescara.jpeg') }}" alt="img">
+          <img src="img/slider/Pescara.jpeg" alt="img">
           <!-- Top slider content -->
           <div class="aa-top-slider-content">
             <div class="aa-property-header-inner">
@@ -199,7 +200,7 @@
         <!-- / Top slider single slide -->
          <!-- Top slider single slide -->
         <div class="aa-top-slider-single">
-          <img src="{{ asset('images/slider/Roma.jpeg') }}" alt="img">
+          <img src="img/slider/Roma.jpeg" alt="img">
           <!-- Top slider content -->
           <div class="aa-top-slider-content">
             <div class="aa-property-header-inner">
@@ -217,17 +218,17 @@
     </div>
   </section>
   <!-- End slider  -->
-
+  
   <!-- Content FAQ-->
   <section id="aa-blog">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-			<div class="aa-title">
-				<h2>FAQ</h2>
-				<p>Domande frequenti</p>
-				<span></span>
-			</div>
+          <div class="aa-title">
+            <h2>Pagina delle FAQ</h2>
+            <p>Domande frequenti</p>
+            <span></span>
+          </div>
 				<fieldset style="border: 1px solid black; padding-top:40px;">
 				<div class="aa-blog-area">
 				<ol>
@@ -240,7 +241,7 @@
 				</li></ol>
 				</div>
 				</fieldset>
-
+				
 		  </div>
         </div>
     </div>
@@ -269,11 +270,11 @@
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12">
               <div class="aa-footer-right">
-                <a href="{{ route('home') }}">Home</a>
-                <a href="{{ route('faq') }}">FAQ</a>
-                <a href="{{ route('contact') }}">Contatti</a>
+                <a href="index.html">Home</a>
+                <a href="faq.html">FAQ</a>
+                <a href="contatti.html">Contatti</a>
               </div>
-            </div>
+            </div>            
           </div>
         </div>
       </div>
@@ -282,21 +283,21 @@
   </footer>
   <!-- / Footer -->
 
-<!-- jQuery library -->
-<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> -->
-<script src="{{ asset('js/jquery.min.js') }}"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="{{ asset('js/bootstrap_layout.js') }}"></script>
-<!-- slick slider -->
-<script type="text/javascript" src="{{ asset('js/slick.js') }}"></script>
-<!-- Price picker slider -->
-<script type="text/javascript" src="{{ asset('js/nouislider.js') }}"></script>
-<!-- mixit slider -->
-<script type="text/javascript" src="{{ asset('js/jquery.mixitup.js') }}"></script>
-<!-- Add fancyBox -->
-<script type="text/javascript" src="{{ asset('js/jquery.fancybox.pack.js') }}"></script>
-<!-- Custom js -->
-<script src="{{ asset('js/custom.js') }}"></script>
-
-</body>
+  <!-- jQuery library -->
+  <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> -->
+  <script src="js/jquery.min.js"></script>   
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="js/bootstrap_layout.js"></script>
+  <!-- slick slider -->
+  <script type="text/javascript" src="js/slick.js"></script>
+  <!-- Price picker slider -->
+  <script type="text/javascript" src="js/nouislider.js"></script>
+   <!-- mixit slider -->
+  <script type="text/javascript" src="js/jquery.mixitup.js"></script>
+  <!-- Add fancyBox -->        
+  <script type="text/javascript" src="js/jquery.fancybox.pack.js"></script>
+  <!-- Custom js -->
+  <script src="js/custom.js"></script> 
+  
+  </body>
 </html>
