--- a/laraProj_RentAdvisor/resources/views/views_html/register.html
+++ b/laraProj_RentAdvisor/resources/views/views_html/register.html
@@ -1,45 +1,46 @@
 <!DOCTYPE html>
-<html lang="it">
-<head>
+<html lang="en">
+  <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">    
     <title>RentAdvisor | Registrazione</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="{{ asset('images/home_house.png') }}" type="image/x-icon">
-
+    <link rel="shortcut icon" href="img/home_house.png" type="image/x-icon">
+    
     <!-- Font awesome -->
-    <link href="{{ asset('css/font-awesome.css') }}" rel="stylesheet">
+    <link href="css/font-awesome.css" rel="stylesheet">
     <!-- Bootstrap -->
-    <link href="{{ asset('css/bootstrap.css') }}" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">   
     <!-- slick slider -->
-    <link rel="stylesheet" type="text/css" href="{{ asset('css/slick.css') }}">
+    <link rel="stylesheet" type="text/css" href="css/slick.css">
     <!-- price picker slider -->
-    <link rel="stylesheet" type="text/css" href="{{ asset('css/nouislider.css') }}">
+    <link rel="stylesheet" type="text/css" href="css/nouislider.css">
     <!-- Fancybox slider -->
-    <link rel="stylesheet" href="{{ asset('css/jquery.fancybox.css') }}" type="text/css" media="screen" />
+    <link rel="stylesheet" href="css/jquery.fancybox.css" type="text/css" media="screen" /> 
     <!-- Theme color -->
-    <link id="switcher" href="{{ asset('css/theme-color/default-theme.css') }}" rel="stylesheet">
+    <link id="switcher" href="css/theme-color/default-theme.css" rel="stylesheet">     
 
     <!-- Main style sheet -->
-    <link href="{{ asset('css/style.css') }}" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">    
 
-
+   
     <!-- Google Font -->
-    <link href='https://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>    
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-
+    
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+  
 
-</head>
-  <body>
+  </head>
+  <body>   
   <section id="aa-signin">
     <div class="container">
       <div class="row">
@@ -48,9 +49,9 @@
             <div class="aa-signin-form">
               <div class="aa-signin-form-title">
                 <h1>Registrazione</h1>
-                <h3>Crea il tuo account e accedi ai servizi <br><br></h3>
+                <h3>Crea il tuo account e accedi ai servizi <br><br></h3>           
               </div>
-              <form class="contactform" action="{{ route('login') }}" name="visualizza_profilo" method="get" enctype="multipart/form-data">
+              <form class="contactform" action="" name="visualizza_profilo" method="get" enctype="multipart/form-data">
                 <div class="aa-properties-content-body">
                     <ul class="aa-properties-nav">
                         <li>
@@ -73,20 +74,20 @@
                                 </div>
                                 <div class="aa-single-field">
                                     <label for="password">Password <span class="required">*</span></label>
-                                    <input type="text" size="30" name="password">
+                                    <input type="text" size="30" name="password"> 
                                 </div>
                                 <div class="aa-single-field">
                                     <label for="conferma-password">Conferma Password <span class="required">*</span></label>
-                                    <input type="text" size="30" name="conferma-password">
+                                    <input type="text" size="30" name="conferma-password"> 
                                 </div>
                               </div>
-                        </li>
+                        </li>                                          
                         <li>
-                            <div class="col-xs-6">
+                            <div class="col-xs-6">                                           
                                 <div class="aa-single-field">
                                     <label for="data_nascita">Data nascita <span class="required">*</span></label>
                                     <input type="text" required="required" aria-required="true" value="" name="data_nascita">
-                                </div>
+                                </div>    
                                 <div class="aa-single-field">
                                     <label for="citta">Città<span class="required">*</span></label>
                                     <input type="text" name="citta" id="citta" value="" size="30" maxlength="50" required="required">
@@ -106,14 +107,14 @@
                                 <div class="aa-single-field">
                                     <label for="gen">Genere<span class="required">*</span></label>
                                     <input type="text" name="gen" id="gen" value="M/F/ND" size="30" maxlength="1" required="required">
-                                </div>
+                                </div> 
                             </div>
                         </li>
                     </ul>
                 </div>
 
                 <div class="aa-single-submit">
-                  <input type="submit" value="Registra" name="submit">
+                  <input type="submit" value="Registra" name="submit">                    
                 </div>
               </form>
             </div>
@@ -121,24 +122,24 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> 
 
 
   <!-- jQuery library -->
   <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> -->
-  <script src="{{ asset('js/jquery.min.js') }}"></script>
+  <script src="js/jquery.min.js"></script>   
   <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="{{ asset('js/bootstrap_layout.js') }}"></script>
+  <script src="js/bootstrap_layout.js"></script>
   <!-- slick slider -->
-  <script type="text/javascript" src="{{ asset('js/slick.js') }}"></script>
+  <script type="text/javascript" src="js/slick.js"></script>
   <!-- Price picker slider -->
-  <script type="text/javascript" src="{{ asset('js/nouislider.js') }}"></script>
-  <!-- mixit slider -->
-  <script type="text/javascript" src="{{ asset('js/jquery.mixitup.js') }}"></script>
-  <!-- Add fancyBox -->
-  <script type="text/javascript" src="{{ asset('js/jquery.fancybox.pack.js') }}"></script>
+  <script type="text/javascript" src="js/nouislider.js"></script>
+   <!-- mixit slider -->
+  <script type="text/javascript" src="js/jquery.mixitup.js"></script>
+  <!-- Add fancyBox -->        
+  <script type="text/javascript" src="js/jquery.fancybox.pack.js"></script>
   <!-- Custom js -->
-  <script src="{{ asset('js/custom.js') }}"></script>
-
+  <script src="js/custom.js"></script> 
+  
   </body>
 </html>
