Implementata funzionalità di login e registrazione e modifica navbar in base a utente

--- a/laraProj_RentAdvisor/resources/views/views_html/messaggi.html
+++ b/laraProj_RentAdvisor/resources/views/views_html/messaggi.html
@@ -105,9 +105,9 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul id="top-menu" class="nav navbar-nav navbar-right aa-main-nav">
             <li><a href="index.html">HOME</a></li>
-			      <li><a href="catalog.blade.php">CATALOGO</a></li>
+			      <li><a href="catalogo.blade.php">CATALOGO</a></li>
             <li> <a href="">AREA PERSONALE</a></li>
-            <li><a href="contact.blade.php">CONTATTI</a></li>
+            <li><a href="contatti.blade.php">CONTATTI</a></li>
             <li><a href="faq.html">FAQ</a></li>
           </ul>
         </div><!--/.nav-collapse -->
