--- a/laraProj_RentAdvisor/resources/views/views_html/visualizza_profilo.html
+++ b/laraProj_RentAdvisor/resources/views/views_html/visualizza_profilo.html
@@ -107,7 +107,7 @@
                         <li><a href="index.html">HOME</a></li>
                         <li><a href="index.html">RICERCA</a></li>
                         <li><a href="faq.html">FAQ</a></li>
-                        <li><a href="contact.blade.php">CONTATTI</a></li>
+                        <li><a href="contatti.blade.php">CONTATTI</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
@@ -238,7 +238,7 @@
                                 <div class="aa-footer-right">
                                     <a href="index.html">Home</a>
                                     <a href="faq.html">FAQ</a>
-                                    <a href="contact.blade.php">Contatti</a>
+                                    <a href="contatti.blade.php">Contatti</a>
                                 </div>
                             </div>
                         </div>
