--- a/laraProj_RentAdvisor/resources/views/views_html/blog-archive.html
+++ b/laraProj_RentAdvisor/resources/views/views_html/blog-archive.html
@@ -118,7 +118,7 @@
                 <li><a href="blog-single.html">BLOG DETAILS</a></li>
               </ul>
             </li>
-            <li><a href="contact.blade.php">CONTACT</a></li>
+            <li><a href="contatti.blade.php">CONTACT</a></li>
             <li><a href="404.html">404 PAGE</a></li>
           </ul>
         </div><!--/.nav-collapse -->
