--- a/laraProj_RentAdvisor/resources/views/views_html/inserimento_annuncio.html
+++ b/laraProj_RentAdvisor/resources/views/views_html/inserimento_annuncio.html
@@ -125,7 +125,7 @@
                         <li><a href="index.html">HOME</a></li>
                         <li><a href="catalogo.html">CATALOGO</a></li>
                         <li class="active"><a href="#">AREA PERSONALE</a></li>
-                        <li><a href="contact.blade.php">CONTATTI</a></li>
+                        <li><a href="contatti.blade.php">CONTATTI</a></li>
                         <li><a href="faq.html">FAQ</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
@@ -417,7 +417,7 @@
                                 <div class="aa-footer-right">
                                     <a href="index.html">Home</a>
                                     <a href="faq.html">FAQ</a>
-                                    <a href="contact.blade.php">Contatti</a>
+                                    <a href="contatti.blade.php">Contatti</a>
                                 </div>
                             </div>
                         </div>
