--- a/laraProj_RentAdvisor/public/css/bootstrap.css
+++ b/laraProj_RentAdvisor/public/css/bootstrap.css
@@ -1934,7 +1934,7 @@ pre code {
   }
 }
 @media (min-width: 992px) {
-  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+	.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
   }
   .col-md-12 {
@@ -1972,6 +1972,11 @@ pre code {
   }
   .col-md-1 {
     width: 8.33333333%;
+  }
+  .col-md-0 {
+    width: auto;
+	float:left;
+	padding-left:15px;
   }
   .col-md-pull-12 {
     right: 100%;
