change position to "contatto" class in .css

--- a/laraProj_RentAdvisor/public/css/style.css
+++ b/laraProj_RentAdvisor/public/css/style.css
@@ -2435,6 +2435,11 @@ img {
   transition: 0.7s;
 }
 
+#contratto{
+  margin:170px;
+  margin-top: 100px;
+}
+
 /*==================
  RESPONSIVE DESIGN
 ====================*/
